--- a/src/App.less
+++ b/src/App.less
@@ -1,11 +1,12 @@
+
+// FlightsList.js
+
 h1 {
     margin-top: 20px;
     font-size: 30px;
 }
 
-.flight-search-form, .flight-list, .flights-found {
-    margin-top: 40px;
-}
+// FlightItem.js
 
 .break-line {
     border-bottom: 1px solid rgba(0,0,0,.125);
@@ -18,3 +19,17 @@ h1 {
 .book-button {
     margin-top: 10px;
 }
+
+// Mixed
+
+.flight-search-form, .flight-list, .flights-found {
+    margin-top: 40px;
+}
+
+.warning {
+    .rbt-input {
+        border: 1px solid #dc3545;
+    }
+}
+
+
